welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: ';' expected but 'else' found.
   else if (Math.abs(10-a)<Math.abs(10-b)) {
   ^close10:8: error: ')' expected but '}' found.
   }} 
    ^